toolchains/eui-compiler/test/error/baselines/Invalid-character-in-tag-name/expect.txt
Error: Invalid character in tag name
<e:Ski-n class="skins.GameMainSkin"
 ^
at line: 2, column: 2
at file: